[package]
name = "objc-foundation-rs"
version = "0.2.0"
authors = ["Steven Sheldon", "Raphael Amorim"]
description = "Rust wrapper for Objective-C's Foundation framework."
keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
repository = "http://github.com/raphamorim/rust-objc-foundation-rs"
documentation = "http://github.com/raphamorim/rust-objc-foundation-rs"
license = "MIT"
edition = "2024"
exclude = [".gitignore"]

[dependencies]
block = "0.1"
objc = "0.2.2"
objc_id = "0.1"
